[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "bioplexpy"
version = "1.0.0"
description = "Python-side access to PPI data from Gygi lab"
readme = "README.md"
license = { file="LICENSE" }
authors = [
    { name = "Roger Vargas, Ludwig Geistlinger, Tyrone Lee", email = "roger_vargas@g.harvard.edu" },
]
dependencies = [
    "anndata",
    "biopython",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "pypdb",
    "requests",
    "scipy",
]


[tool.hatch.version]
path = "bioplexpy/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]
include = [
    "/bioplexpy",
]


[tool.hatch.build.targets.wheel]
packages = ["bioplexpy"]